samples/_failures_safe/1761263705_627287_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fd22c445.c: In function ‘main’:
./samples/SAFE/__tmp_fd22c445.c:144:12: error: missing terminating " character
  144 |     printf("\n
      |            ^~~
./samples/SAFE/__tmp_fd22c445.c:144:5: error: expected expression at end of input
  144 |     printf("\n
      |     ^~~~~~
./samples/SAFE/__tmp_fd22c445.c:144:5: error: expected declaration or statement at end of input
